# dcat_4_hpc

./: README.md  proposal.md
.github/workflows/: rust.yml
agr-data-mesh/: .gitignore  Cargo.toml  README.md
feather-mesh/: README.md
feather-mesh/mesh_core/: Cargo.toml
feather-mesh/mesh_core/src/: db.rs  lib.rs
feather-mesh/mesh_core/src/models/: README.md  data_product.rs  metadata.rs  mod.rs  team.rs
feather-mesh/mesh_core/src/models/entities/: data_product.rs  data_product_version.rs  lineage_dependency.rs  metadata.rs  mod.rs  team.rs
feather-mesh/mesh_core/src/models/new/: data_product.rs  data_product_version.rs  lineage_dependency.rs  metadata.rs  mod.rs  team.rs
feather-mesh/mesh_core/src/repositories/: README.md  data_product_repository.rs  data_product_version_repository.rs  lineage_dependency_repository.rs  metadata_repository.rs  mod.rs  team_repository.rs
feather-mesh/mesh_core/src/services/: README.md  mod.rs  registry_service.rs
feather-mesh/mesh_core/tests/: fixture_tests.rs  repository_tests.rs  service_tests.rs
python_mvp/: README.md  main.py  mesh_registry.json  pyproject.toml
python_mvp/registry/: __init__.py  cli.py  models.py  seed.py  services.py
