[project]
name = "data-registry-cli"
version = "0.1.0"
description = "MVP data registry CLI for datamesh capstone"
authors = [
  { name = "Capstone Team" },
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
# This will create a `dcat` command that runs the CLI
# Usage after install: `dcat teams`, `dcat products`, etc.
dcat = "registry.cli:run"
